--- a/SciCalc/SciCalc/Resources/Styles/Styles.xaml
+++ b/SciCalc/SciCalc/Resources/Styles/Styles.xaml
@@ -70,6 +70,32 @@
                 Radius="12"
                 Opacity="0.5"/>
         </Setter>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
+    </Style>
+    
+    <!--label styles-->
+    <Style TargetType="Label" x:Key="EqualsLabelStyle">
+        <Setter Property="FontSize" Value="28"/>
+        <Setter Property="TextColor" Value="#efbb31"/>
+        <Setter Property="FontFamily" Value="LightFont"/>
+        <Setter Property="LineBreakMode" Value="TailTruncation"/>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
+    </Style>
+
+    <Style TargetType="Label" x:Key="ResultLabelStyle">
+        <Setter Property="FontSize" Value="28"/>
+        <Setter Property="TextColor" Value="White"/>
+        <Setter Property="FontFamily" Value="RegularFont"/>
+        <Setter Property="LineBreakMode" Value="TailTruncation"/>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
+    </Style>
+
+    <Style TargetType="Label" x:Key="InputBoxLabelStyle">
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="TextColor" Value="White"/>
+        <Setter Property="FontFamily" Value="LightFont"/>
+        <Setter Property="LineBreakMode" Value="WordWrap"/>
+        <Setter Property="FontAutoScalingEnabled" Value="False"/>
     </Style>
 
 </ResourceDictionary>
